kubernetes/template.yaml
---

apiVersion: "apps/v1"
kind: "Deployment"
metadata: 
  name: "order"
  labels: 
    app: "order"
  namespace: ""
  annotations: 
    msaez.io/x: "775"
    msaez.io/y: "556"
spec: 
  selector: 
    matchLabels: 
      app: "order"
  replicas: 1
  template: 
    metadata: 
      labels: 
        app: "order"
    spec: 
      containers: 
        - 
          name: "order"
          image: "apexacme/order:1124"
          ports: 
            - 
              containerPort: 8080
          readinessProbe: 
            httpGet: 
              path: "/actuator/health"
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe: 
            httpGet: 
              path: "/actuator/health"
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5
---

apiVersion: "apps/v1"
kind: "Deployment"
metadata: 
  name: "delivery"
  labels: 
    app: "delivery"
  namespace: ""
  annotations: 
    msaez.io/x: "775"
    msaez.io/y: "556"
spec: 
  selector: 
    matchLabels: 
      app: "delivery"
  replicas: 1
  template: 
    metadata: 
      labels: 
        app: "delivery"
    spec: 
      containers: 
        - 
          name: "delivery"
          image: "apexacme/delivery:1124"
          ports: 
            - 
              containerPort: 8080
          readinessProbe: 
            httpGet: 
              path: "/actuator/health"
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe: 
            httpGet: 
              path: "/actuator/health"
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5
---

apiVersion: "apps/v1"
kind: "Deployment"
metadata: 
  name: "product"
  labels: 
    app: "product"
  namespace: ""
  annotations: 
    msaez.io/x: "775"
    msaez.io/y: "556"
spec: 
  selector: 
    matchLabels: 
      app: "product"
  replicas: 1
  template: 
    metadata: 
      labels: 
        app: "product"
    spec: 
      containers: 
        - 
          name: "product"
          image: "apexacme/product:1124"
          ports: 
            - 
              containerPort: 8080
          readinessProbe: 
            httpGet: 
              path: "/actuator/health"
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe: 
            httpGet: 
              path: "/actuator/health"
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5
---

apiVersion: "v1"
kind: "Service"
metadata: 
  name: "order"
  labels: 
    app: "order"
  namespace: ""
  annotations: 
    msaez.io/x: "775"
    msaez.io/y: "356"
spec: 
  ports: 
    - 
      port: 8080
      targetPort: 8080
  selector: 
    app: "order"

---

apiVersion: "v1"
kind: "Service"
metadata: 
  name: "delivery"
  labels: 
    app: "delivery"
  namespace: ""
  annotations: 
    msaez.io/x: "775"
    msaez.io/y: "356"
spec: 
  ports: 
    - 
      port: 8080
      targetPort: 8080
  selector: 
    app: "delivery"

---

apiVersion: "v1"
kind: "Service"
metadata: 
  name: "product"
  labels: 
    app: "product"
  namespace: ""
  annotations: 
    msaez.io/x: "775"
    msaez.io/y: "356"
spec: 
  ports: 
    - 
      port: 8080
      targetPort: 8080
  selector: 
    app: "product"
